--- a/examples/solo-blog/tmpl/base.html.tmpl
+++ b/examples/solo-blog/tmpl/base.html.tmpl
@@ -1,12 +1,23 @@
-{{define "layout" -}}
+{{define "base" -}}
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
-    <title>Document</title>
+    <meta charset="utf-8"/>
+    <link rel="icon" href="data:,">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>{{- if ne $.DocumentTitle "" -}} {{$.DocumentTitle}} - {{- end -}}Solo Blog</title>
   </head>
+
   <body>
-    {{- template "content" -}}
+    <header>
+      <h1><a href="/">Solo Blog</a></h1>
+    </header>
+
+    <main role="main">
+      {{- template "content" -}}
+    </main>
   </body>
+
 </html>
 {{- end}}
