--- a/examples/multi-blog/blog/foo/tmpl/base.html.tmpl
+++ b/examples/multi-blog/blog/foo/tmpl/base.html.tmpl
@@ -15,7 +15,7 @@
     </header>
 
     <main role="main">
-      {{- template "content" -}}
+      {{- template "content" . -}}
     </main>
   </body>
 
